--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://blog.igorcaldeira.dev/",
   "name": "dev-blog",
   "version": "0.1.0",
   "private": true,
@@ -21,6 +22,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "createPosts": "node src/markdownParser.js"
   },
   "eslintConfig": {
@@ -43,6 +46,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.12",
+    "gh-pages": "^6.1.1",
     "tailwindcss": "^3.4.3"
   }
 }
